Fixed some Layout Problems

--- a/react-app-catx/src/View.css
+++ b/react-app-catx/src/View.css
@@ -92,7 +92,7 @@
 .detail-preview-left-side {
     overflow: auto;
     width: 100%;
-    height: 400px;
+    height: 90%;
     padding: 10px;
     font-size: 14px;
     resize: vertical;
